# rgbd

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
.github/workflows/: cmake.yml
controller/: go.mod  main.go
controller/cmd/: set.go  version.go
controller/midlevel/: keyboard.go
daemon/: fork.c  fork.h  init.c  keyboard.cpp  keyboard.h  parser.c  parser.cpp  parser.h  socket.c  socket.h
daemon/keyboard/: Keyboard.cpp  Keyboard.h  KeyboardConfig.cpp  KeyboardParser.cpp  KeyboardParser.h  Keyboard_C.h
rgbctl/: Makefile  go.mod  go.sum  main.go
rgbctl/cmd/: exit.go  root.go  set.go  update.go
rgbctl/lowlevel/: socket.go
rgbctl/midlevel/: keyboard.go  misc.go
rgbctl/udev/: rgbd.rules
src/: main.c  test.c
